<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/task_assignment_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/header_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/milk_white"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/page_header"
            layout="@layout/company_banner_horizontal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center|center_vertical" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/greeter_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:background="@color/company_color">

            <TextView
                android:id="@+id/time_of_day_greeting_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_time_of_day"
                android:textColor="@color/milk_white"
                android:textSize="18sp"
                android:gravity="center|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name_txv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_user_name"
                android:textColor="@color/milk_white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_of_day_greeting_txv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/home_body_scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/slightly_gray"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_body_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_app_bar">

            <androidx.cardview.widget.CardView
                android:id="@+id/home_task_card_item"
                android:layout_width="393dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_task_card_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/task_image"
                        android:layout_width="34dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/tasks_to_complete"
                        android:src="@drawable/ec_tasks"
                        app:layout_constraintBottom_toBottomOf="@+id/check_tasks_txv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/check_tasks_txv" />

                    <TextView
                        android:id="@+id/check_tasks_txv"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:gravity="center|center_vertical"
                        android:text="@string/home_tasks_option"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/task_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/forward_arrow"
                        android:layout_width="20dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/view_task_arrow"
                        android:src="@drawable/ec_right_arrow"
                        app:layout_constraintBottom_toBottomOf="@+id/check_tasks_txv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/check_tasks_txv" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_btn_bg"
        android:text="@string/logout_off_app"
        android:textColor="@color/milk_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

